--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<router-outlet>
-  <div class="text-3xl">OLÁ</div>
-</router-outlet>
+<div class=" min-h-screen flex flex-col">
+
+    <app-navbar></app-navbar>
+
+    <main class="flex-grow">
+        <router-outlet></router-outlet>
+    </main>
+    
+    <app-footer></app-footer>
+</div>
