--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,34 @@
-<p>home works!</p>
+<div class="container mx-auto mt-20 lg:h-[calc(100vh-10vh)] w-4/5">
+        <div class="my-5">
+            <h1 class="text-center text-3xl font-bold">Sejam Bem Vindos ao Meu Blog!</h1>
+        </div>
+    
+        <div class="mb-5">
+            <p class="text-center text-lg leading-relaxed">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus delectus ad nam
+                    quibusdam! Expedita
+                    nulla eligendi porro aperiam eaque adipisci possimus omnis praesentium veritatis dolor? Modi provident
+                    temporibus numquam a! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam repellendus quae quia
+                    alias ullam consequuntur sit, praesentium dolore assumenda! Molestias beatae nemo nobis nulla rem dolores nihil
+                    corrupti illum blanditiis?
+            </p>
+        </div>
+            
+        <div class="parallax h-64 bg-cover bg-center"></div>
+            
+            
+        <div class="my-5">
+            <p class="text-center text-lg leading-relaxed">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus delectus ad nam
+                    quibusdam! Expedita
+                    nulla eligendi porro aperiam eaque adipisci possimus omnis praesentium veritatis dolor? Modi provident
+                    temporibus numquam a! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam repellendus quae quia
+                    alias ullam consequuntur sit, praesentium dolore assumenda! Molestias beatae nemo nobis nulla rem dolores nihil
+                    corrupti illum blanditiis?
+            </p>
+        </div>
+    
+        <div class="mt-10 mb-10 flex justify-center w-3/5 mx-auto">
+            <button class="w-full items-center btn btn-outline-dark border border-gray-800 text-gray-800 px-4 py-2 rounded hover:bg-gray-800 hover:text-white" routerLink='/feed'>Ver o feed</button>
+        </div>
+    
+
+</div>
