--- a/src/app/ui/footer/footer.component.html
+++ b/src/app/ui/footer/footer.component.html
@@ -1,1 +1,24 @@
-<p>footer works!</p>
+<footer class="bg-white rounded-lg shadow dark:bg-gray-900 mt-8 w-4/5 mx-auto">
+    <div class="w-4/5 max-w-screen-xl mx-auto p-2 md:py-4 container">
+        <div class="sm:flex sm:items-center sm:justify-between">
+            <a href="https://wearedev.com.br/theG0ulart/" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
+                <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">WeAreDev</span>
+            </a>
+            <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-gray-400">
+                <li>
+                    <a routerLink="/home" class="hover:underline me-4 md:me-6">Home</a>
+                </li>
+                <li>
+                    <a routerLink="/feed" class="hover:underline me-4 md:me-6">Feed</a>
+                </li>
+           
+                <li>
+                    <a routerLink="/contact" class="hover:underline">Contato</a>
+                </li>
+            </ul>
+        </div>
+        <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
+        <span class="block text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 <a href="https://wearedev.com.br/theG0ulart/" class="hover:underline">WeAreDev™</a>. All Rights Reserved.</span>
+    </div>
+</footer>
+
