--- a/src/styles.css
+++ b/src/styles.css
@@ -3,5 +3,5 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body { height: 100%; }
+html, body { height: 100%; margin: 0; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
